<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTitleBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:padding="@dimen/size_08"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_edit_profile_back"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/size_08"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:id="@+id/iv_edit_profile_apply"
            android:layout_width="@dimen/size_48"
            android:layout_height="@dimen/size_48"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="@dimen/size_08"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_apply"
            android:contentDescription="@string/app_name"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_16"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_edit_profile_avatar"
            android:layout_width="@dimen/size_96"
            android:layout_height="@dimen/size_96"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/size_08"
            android:src="@drawable/img_no_avatar"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="1dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_edit_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/username"
            app:met_baseColor="@color/colorDarkGrayText"
            app:met_primaryColor="@color/colorTitleBar"
            app:met_errorColor="#ddaa00"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_user"
            app:met_clearButton="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_edit_profile_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/full_name"
            app:met_baseColor="@color/colorDarkGrayText"
            app:met_primaryColor="@color/colorTitleBar"
            app:met_errorColor="#ddaa00"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_user"
            app:met_clearButton="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email"
            app:met_baseColor="@color/colorDarkGrayText"
            app:met_primaryColor="@color/colorTitleBar"
            app:met_errorColor="#ddaa00"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_email"
            app:met_clearButton="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_edit_profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio"
            app:met_baseColor="@color/colorDarkGrayText"
            app:met_primaryColor="@color/colorTitleBar"
            app:met_errorColor="#ddaa00"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_bio"
            app:met_clearButton="true"/>
    </LinearLayout>
</LinearLayout>