<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.AboutFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_bg_page_1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_16"
                android:layout_marginEnd="@dimen/size_16"
                android:text="@string/about"
                android:textSize="@dimen/font_size_32"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="@dimen/size_150"
                android:layout_height="wrap_content"
                android:src="@drawable/img_logo"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/size_32"
            android:layout_marginRight="@dimen/size_32"
            android:gravity="center"
            android:text="@string/page_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_18"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
