<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.AboutFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_bg_page_1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/size_150"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/size_32"
            android:src="@drawable/img_logo"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size_16"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_contact_us_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/subject"
                app:met_baseColor="@android:color/white"
                app:met_textColor="@android:color/white"
                app:met_textColorHint="@android:color/white"
                app:met_underlineColor="@android:color/white"
                app:met_primaryColor="@color/colorMainButtonSelected"
                app:met_errorColor="@color/colorMainButtonSelected"
                app:met_floatingLabel="normal"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_contact_us_message"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|start"
                android:hint="@string/message"
                app:met_baseColor="@android:color/white"
                app:met_textColor="@android:color/white"
                app:met_textColorHint="@android:color/white"
                app:met_underlineColor="@android:color/white"
                app:met_primaryColor="@color/colorMainButtonSelected"
                app:met_errorColor="@color/colorMainButtonSelected"
                app:met_floatingLabel="normal"
                app:met_clearButton="true"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_contact_us_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/size_24"
                android:layout_marginBottom="@dimen/size_24"
                fancy:fb_defaultColor="@android:color/transparent"
                fancy:fb_focusColor="@color/whiteColorWithOpecity"
                fancy:fb_radius="0dp"
                fancy:fb_borderWidth = "2dp"
                fancy:fb_borderColor = "@android:color/white"
                fancy:fb_text="Leave a message"
                fancy:fb_textSize = "@dimen/font_size_20"
                fancy:fb_textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
